--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel='stylesheet' href='/stylesheets/index.css'>
+		<script src='javascripts/index.js'></script>
 	</head>
 	<body>
 		<div class='dividers' id='blue_div'>
@@ -19,6 +20,7 @@
 			</div>
 		</div>
 		<div class='dividers' id='theyellowdiv'>
+			<img src='/images/auraws.png' alt='aura' id='aura'/>
 			<div id='becomeweb'>
 				<h1 id='firsttext'>DEVENEZ <br/> WEBTAGGER<span class='yellow'>!</span></h1><br />
 				<a class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
@@ -41,13 +43,38 @@
 				<p id='secondtext'>Un Site Web</p>
 			</div>
 			<div class='inline'>
-				<img src='/images/app_accueil.png' alt='app' id='app'/><br />
+				<img src='/images/app_screen.png' alt='app' id='app'/><br />
 				<!-- <img src='/images/app_stars.png' alt='app2' id='app' -->
 				<p id='secondtext'>Une Application</p>
 			</div>
 		</div>
 		<div id='giantdiv'>
-			<!-- <img src='/images/fond_orange-01.png' alt='orangebg' id='orangebg'/> -->
+			<img src='/images/fond_orangecrop.png' alt='orangebg' id='orangebg'/>
+			<h1 id='num1'>01</h1>
+			<h1 id='pluginh1'>Plugin</h1>
+			<img src='/images/plugg.png' alt='plugin' id='pluginpic'/>
+			<img src='/images/sticker-01.png' alt='plugin' id='pluginlg'/>
+			<p id='plugintxt'>
+				Grâce au téléchargement d’un plugin, muni d’un outil graphique performant, il sera bientôt possible de tagger le web ou d’y importer des a
+				Le plugin marche comme un calque qui s’applique directement sur tous les sites internet, et permet de créer et de visualiser les oeuvres des webtaggers.
+			</p>
+			<p>
+
+			</p>
+			<img src='/images/fond_bleucrop.png' alt='bluebg' id='bluebg'/>
+			<h1 id='num2'>02</h1>
+			<h1 id='siteh1'>Site Web</h1>
+			<img src='/images/mac_accueil.png' alt='site' id='sitepic'/>
+			<p id='sitetxt'>
+				Le plugin est lié à un site internet communautaire où les webtaggers ont leur galerie personnelle — comme un book — pour partager leurs oeuvres et celles des autres. Grâce au site, il sera possible d’établir des partenariats avec des sites, des marques et de vendre ses oeuvres.
+			</p>
+			<img src='/images/fond_rosecrop.png' alt='rosebg' id='rosebg'/>
+			<h1 id='num3'>03</h1>
+			<h1 id='apph1'>Application</h1>
+			<img src='/images/app_screen.png' alt='app' id='apppic'/><br />
+			<p id='apptxt'>
+				L’application est une déclinaison ludique du site, où l’utilisateur peut personnaliser son rapport aux oeuvres par une notation en étoiles, exprimer ses émotions par des émoticônes et échanger sur des canaux de discussion.
+			</p>
 		</div>
 		<div class='dividers' id='footer'>
 			<h2 class='whities'>POUR PLUS D'INFORMATIONS</h2>
@@ -66,9 +93,9 @@
 						si vous souhaitez être tenu au courant <br />
 						de la sortie world wild de notre plateforme ? <br />
 						<span id='smallersize'>Laissez-nous votre adresse mail ci dessous :</span>
-						<div id='email'>
-							<a class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
-						</div>
+							<form action='/' method='post' name='emailForm'>
+								<input class='whities' type='email' name='email' placeholder='Email' id='email'/>
+							</form>
 					</p>
 				</div>
 			</div>
