--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,16 +2,14 @@
 <html>
 	<head>
 		<link rel='stylesheet' href='/stylesheets/index.css'>
+		<!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
 		<script src='javascripts/index.js'></script>
 	</head>
 	<body>
 		<div class='dividers' id='blue_div'>
-			<div class="inner_content">
 			<img src='/images/logo_blanc-01.png' alt='logo' id='logo'>
-			</div>
 		</div>
 		<div class='dividers'>
-			<div class="inner_content">
 			<img src='/images/ilu-01.png' alt='tag-calc' id='tagcomp'/>
 			<div id='firsttext'>
 				<h1>TRANSFORMER <br />LE WEB<span class='yellow'>.</span></h1>
@@ -21,43 +19,37 @@
 					s’exprimer et devenir artiste numérique.
 				</p>
 			</div>
-			</div>
 		</div>
 		<div class='dividers' id='theyellowdiv'>
-			<div class="inner_content">
-				<img src='/images/auraws.png' alt='aura' id='aura'/>
-				<div id='becomeweb'>
-					<h1 id='firsttext'>DEVENEZ <br/> WEBTAGGER<span class='yellow'>!</span></h1><br />
-					<a class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
-				</div>
-				<p id='secondtext'>
-					Webtag s’inspire du street art et prend le web<br />
-					comme un mur virtuel, avec l’ambition de créer <br />
-					une plateforme communautaire pour les artistes <br />
-					et amateurs, en proposant un nouvel espace <br />
-					d’expression artistique sur le web.
-				</p>
+			<img src='/images/auraws.png' alt='aura' id='aura'/>
+			<div id='becomeweb'>
+				<h1 id='firsttext'>DEVENEZ <br/> WEBTAGGER<span class='yellow'>!</span></h1><br />
+				<a class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
 			</div>
+			<p id='secondtext'>
+				Webtag s’inspire du street art et prend le web
+				comme un mur virtuel, avec l’ambition de créer
+				une plateforme communautaire pour les artistes
+				et amateurs, en proposant un nouvel espace
+				d’expression artistique sur le web.
+			</p>
 		</div>
 		<div class='dividers' id='whatitis'>
-			<div class="inner_content">
 			<div class='inline'>
 				<img src='/images/sticker-01.png' alt='plugin' id='plugin'/><br />
-				<p id='secondtext'>Un Plugin</p>
+				<p id='thirdtext'>Un Plugin</p>
 			</div>
 			<div class='inline'>
 				<img src='/images/mac_accueil.png' alt='site' id='site'/><br />
-				<p id='secondtext'>Un Site Web</p>
+				<p id='thirdtext'>Un Site Web</p>
 			</div>
 			<div class='inline'>
 				<img src='/images/app_screen.png' alt='app' id='app'/><br />
 				<!-- <img src='/images/app_stars.png' alt='app2' id='app' -->
-				<p id='secondtext'>Une Application</p>
-			</div>
+				<p id='thirdtext'>Une Application</p>
 			</div>
 		</div>
 		<div id='giantdiv'>
-			<div class="inner_content">
 			<img src='/images/fond_orangecrop.png' alt='orangebg' id='orangebg'/>
 			<h1 id='num1'>01</h1>
 			<h1 id='pluginh1'>Plugin</h1>
@@ -84,10 +76,8 @@
 			<p id='apptxt'>
 				L’application est une déclinaison ludique du site, où l’utilisateur peut personnaliser son rapport aux oeuvres par une notation en étoiles, exprimer ses émotions par des émoticônes et échanger sur des canaux de discussion.
 			</p>
-			</div>
 		</div>
 		<div class='dividers' id='footer'>
-			<div class="inner_content">
 			<h2 class='whities'>POUR PLUS D'INFORMATIONS</h2>
 			<div>
 				<div class='contact' id='cont'>
@@ -108,7 +98,6 @@
 								<input class='whities' type='email' name='email' placeholder='Email' id='email'/>
 							</form>
 					</p>
-				</div>
 				</div>
 			</div>
 		</div>
