--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 			<img src='/images/auraws.png' alt='aura' id='aura'/>
 			<div id='becomeweb'>
 				<h1 id='firsttext'>DEVENEZ <br/> WEBTAGGER<span class='yellow'>!</span></h1><br />
-				<a class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
+				<a id='link' class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
 			</div>
 			<p id='secondtext'>
 				Webtag s’inspire du street art et prend le web
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 		<div class='dividers' id='footer'>
-			<h2 class='whities'>POUR PLUS D'INFORMATIONS</h2>
+			<h2 class='whities' id='size'>POUR PLUS D'INFORMATIONS</h2>
 			<div>
 				<div class='contact' id='cont'>
 					<p class='whities' id='secondtext'>
@@ -88,7 +88,7 @@
 						premiere contactez nous a cette adresse :
 					</p>
 					<div id='contactus'>
-						<a class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
+						<a id='link' class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
 					</div>
 				</div>
 				<div class='contact'>
@@ -100,6 +100,9 @@
 								<input class='whities' type='email' name='email' placeholder='Email' id='email'/>
 							</form>
 					</p>
+				</div>
+				<div id='smedia'>
+					<a class='whities' id='social' href="https://www.facebook.com/terrainvaguefr/">FACEBOOK</a> | <a class='whities' id='social' href="https://www.instagram.com/terrainvaguefr/">INSTAGRAM</a> | <a class='whities' id='social' href="mailto:contact@terrainvague.fr">TWITTER</a></a>
 				</div>
 			</div>
 		</div>
