--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -143,7 +143,7 @@ section.content {
 .main {
 	width: 100%;
 	min-height: 700px;
-	background: url(/images/back.png) no-repeat;
+	background: url(/images/fondtitre.png) no-repeat;
 	background-size: cover;margin: 0 auto;
 	background-attachment: fixed;
 	background-position: center;
