--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,14 @@
 		<script src='javascripts/index.js'></script>
 	</head>
 	<body>
-		<div class='dividers' id='blue_div'>
-			<img src='/images/logo_blanc-01.png' alt='logo' id='logo'>
+		<div>
+			<section class="main">
+				<div id="main_titles">
+					<img src="images/logo_blanc-01.png">
+					<a href="http://google.com"><span id="Button"> Rejoignez-Nous </span></a>
+				</div>
+			</section>
+			<!-- <img src='/images/logo_blanc-01.png' alt='logo' id='logo'> -->
 		</div>
 		<div class='dividers'>
 			<img src='/images/ilu-01.png' alt='tag-calc' id='tagcomp'/>
