uptop changes and order

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,32 @@
 			<section class="main">
 				<div id="main_titles">
 					<img src="images/logo_blanc-01.png">
-					<a href="http://google.com"><span id="Button"> Rejoignez-Nous </span></a>
+					<div class='contact'>
+						<p>
+							Vous souhaitez faire partis des premiers à utiliser Webtag? <br/>
+							Laissez nous votre email!
+						</p>
+						<form action='/' method='post' name='emailForm'>
+							<input class='whities' type='email' name='email' placeholder='Email' id='email2'/>
+						</form>
+					</div>
 				</div>
 			</section>
-			<!-- <img src='/images/logo_blanc-01.png' alt='logo' id='logo'> -->
 		</div>
-		<div class='dividers'>
+		<div class='dividers' id='become'>
+			<div id='becomeweb'>
+				<h1 id='firsttext'>DEVENEZ <br/> WEBTAGGER<span class='yellow'>!</span></h1><br />
+			</div>
+			<p id='secondtext'>
+				Webtag s’inspire du street art et prend le web
+				comme un mur virtuel, avec l’ambition de créer
+				une plateforme communautaire pour les artistes
+				et amateurs, en proposant un nouvel espace
+				d’expression artistique sur le web.
+			</p>
+		</div>
+		<div class='dividers' id='theyellowdiv'>
+			<img src='/images/auraws.png' alt='aura' id='aura'/>
 			<img src='/images/ilu-01.png' alt='tag-calc' id='tagcomp'/>
 			<div id='firsttext'>
 				<h1>TRANSFORMER <br />LE WEB<span class='yellow'>.</span></h1>
@@ -25,20 +45,6 @@
 					s’exprimer et devenir artiste numérique.
 				</p>
 			</div>
-		</div>
-		<div class='dividers' id='theyellowdiv'>
-			<img src='/images/auraws.png' alt='aura' id='aura'/>
-			<div id='becomeweb'>
-				<h1 id='firsttext'>DEVENEZ <br/> WEBTAGGER<span class='yellow'>!</span></h1><br />
-				<a id='link' class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
-			</div>
-			<p id='secondtext'>
-				Webtag s’inspire du street art et prend le web
-				comme un mur virtuel, avec l’ambition de créer
-				une plateforme communautaire pour les artistes
-				et amateurs, en proposant un nouvel espace
-				d’expression artistique sur le web.
-			</p>
 		</div>
 		<div class='dividers' id='whatitis'>
 			<div class='inline'>
@@ -87,7 +93,7 @@
 		</div>
 		<div class='dividers' id='footer'>
 			<h2 class='whities' id='size'>POUR PLUS D'INFORMATIONS</h2>
-			<div>
+			<div id='foot'>
 				<div class='contact' id='cont'>
 					<p class='whities' id='secondtext'>
 						si vous voulez recevoir le plugin en avant <br />
@@ -100,17 +106,18 @@
 				<div class='contact'>
 					<p class='whities' id='secondtext'>
 						si vous souhaitez être tenu au courant <br />
-						de la sortie world wild de notre plateforme ? <br />
+						de la sortie world wide de notre plateforme ? <br />
 						<span id='smallersize'>Laissez-nous votre adresse mail ci dessous :</span>
 							<form action='/' method='post' name='emailForm'>
 								<input class='whities' type='email' name='email' placeholder='Email' id='email'/>
 							</form>
 					</p>
 				</div>
-				<div id='smedia'>
-					<a class='whities' id='social' href="https://www.facebook.com/terrainvaguefr/">FACEBOOK</a> | <a class='whities' id='social' href="https://www.instagram.com/terrainvaguefr/">INSTAGRAM</a> | <a class='whities' id='social' href="mailto:contact@terrainvague.fr">TWITTER</a></a>
-				</div>
+				<h1>
+					<a href="https://www.facebook.com/WebtagTeam/">facebook</a> | <a href="https://www.instagram.com/webtagteam/">Instagram</a> | <a href="https://twitter.com/webtagteam">Twitter</a>
+				</h1>
 			</div>
 		</div>
+		<section class="copyright">	<h1>© Webtag - All rights reserved 2017</h1> </section>
 	</body>
 </html>
