--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -19,18 +19,22 @@ a{
 
 *::-webkit-input-placeholder {
 	color: white;
+	font-size: 15px;
 }
 *:-moz-placeholder {
 	/* FF 4-18 */
 	color: white;
+	font-size: 15px;
 }
 *::-moz-placeholder {
 	/* FF 19+ */
 	color: white;
+	font-size: 15px;
 }
 *:-ms-input-placeholder {
 	/* IE 10+ */
 	color: white;
+	font-size: 15px;
 }
 
 h1{
@@ -61,6 +65,7 @@ h2{
 #main_titles {
 width:100%;
 margin: 0 auto;
+text-align: center;
 }
 
 #main_titles img {
@@ -71,20 +76,15 @@ margin: 0 auto;
 	padding-top:10em;
 }
 
-span#Button {
-	display:block;
-	color:white;
-	text-align:center;
-	width: 10em;
-	margin: 0 auto;
-	border: 2px solid white;
-	border-radius: 25px;
-	padding: 8px;
-	text-transform: uppercase;
-	letter-spacing: 0.2em;
-	font-size:0.7em;
-	font-weight: bold;
+#main_titles p{
+	text-align: center;
+	color: white;
 	font-family: 'Gilroy-Light';
+	font-weight: bold;
+}
+
+#main_titles input{
+	border-radius: 25px; border : 3px solid white; padding: 18px; font-family: 'Gilroy-Light'; background-color: #001360;
 }
 
 @media screen and (min-width: 1241px)
@@ -98,7 +98,7 @@ span#Button {
 	#plugintxt{ right: 145px; margin-top: 100px; }
 	#apptxt{ left: 200px; margin-top : 660px; }
 	#sitetxt{ right : 145px; margin-top: 1200px; }
-	#aura{margin-top: 210px;}
+	#aura{margin-top: 310px;}
 }
 
 @media screen and (max-width: 1240px)
@@ -112,9 +112,13 @@ span#Button {
 	}
 }
 @media screen and (max-width: 1000px){
-	#aura{margin-top: 350px;}
+	#aura{margin-top: 350px; }
+
+	.inner_content{
+		min-width: 1000px;
+	}
 }
-#email{ border-radius: 25px; border : 2px solid white; padding: 18px; font-family: 'Gilroy-Light'; background-color: blue}
+#email{ margin-left: -100px; border-radius: 25px; border : 3px solid white; padding: 18px; font-family: 'Gilroy-Light'; background-color: #001360}
 
 .yellow{
 	color : #F8BF26;
@@ -137,11 +141,12 @@ span#Button {
 	background-color: darkblue;
 }
 
-#theyellowdiv{
-	background-color: #F4F0CD;
-	padding-bottom: 100px;
-	padding-top: 50px;
+#become{
+	padding-bottom: 80px;
+	padding-top: 80px;
 }
+
+#theyellowdiv{ background-color: #F4F0CD;}
 
 #logo{ height:370px; width: auto; }
 #tagcomp{ height: 380px; width: auto; padding-top: 20px; margin-right: 110px;}
@@ -182,6 +187,7 @@ span#Button {
 #contactus{
 	margin-top: 30px;
 	font-family: 'Gilroy-Light';
+	margin-left: -100px;
 	/*font-weight: 60px;*/
 	/*border-radius: 25px;
 	border : 2px solid white;
@@ -259,19 +265,45 @@ span#Button {
 	right: 130px;
 }
 
-#footer{background-color: blue; padding-bottom: 30px; padding-top: 30px;}
-
-/*#cont{ margin-right: 30px;}*/
+#footer{background-color: #001360; padding-bottom: 30px; padding-top: 30px;}
 
 #smallersize{font-size: 12px; }
 
-#smedia{
+/*#smedia{
 	margin-top: 50px;
-}
+}*/
 #size{
 	font-size: 20px;
 }
-#social{
+/*#social{
 	font-family: 'Gotham-Bold';
 	font-size: 12px;
+}*/
+
+#foot h1{
+	margin-top: 50px;
+	text-align:center;
+	text-transform:uppercase;
+	font-size:0.8em;
+	letter-spacing:0.05em;
+	color:white;
+}
+
+#foot h1 a{
+color:white;
+}
+
+.copyright {
+min-height: 50px;
+background:white;
+}
+
+.copyright h1 {
+font-size: 0.6em;
+letter-spacing: 0.05em;
+color: #a3a3a3;
+text-transform:uppercase;
+text-align:center;
+padding-top: 18px;
+font-weight:normal;
 }
