--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 					<img src="images/logo_blanc-01.png">
 					<div class='contact'>
 						<p>
-							Vous souhaitez faire partis des premiers à utiliser Webtag? <br/>
+							Vous souhaitez faire parti des premiers à utiliser Webtag? <br/>
 							Laissez nous votre email!
 						</p>
 						<form action='/' method='post' name='emailForm'>
@@ -97,7 +97,7 @@
 				<div class='contact' id='cont'>
 					<p class='whities' id='secondtext'>
 						si vous voulez recevoir le plugin en avant <br />
-						premiere contactez nous a cette adresse :
+						premiere contactez nous à cette adresse :
 					</p>
 					<div id='contactus'>
 						<a id='link' class='whities' href='mailto:team@webtag.fr'>team@webtag.fr</a>
@@ -106,8 +106,8 @@
 				<div class='contact'>
 					<p class='whities' id='secondtext'>
 						si vous souhaitez être tenu au courant <br />
-						de la sortie world wide de notre plateforme ? <br />
-						<span id='smallersize'>Laissez-nous votre adresse mail ci dessous :</span>
+						de la sortie world wide de notre plateforme <br />
+						<span id='smallersize'>Laissez nous votre adresse mail ci dessous :</span>
 							<form action='/' method='post' name='emailForm'>
 								<input class='whities' type='email' name='email' placeholder='Email' id='email'/>
 							</form>
