--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -134,7 +134,7 @@ text-align: center;
 	color : #FFFFFF;
 }
 
-.contact{ display: inline-block; vertical-align: top;}
+.contact{ display: inline-block; vertical-align: top; margin-bottom: 50px;}
 
 #blue_div{
 	text-align: center;
@@ -267,7 +267,7 @@ text-align: center;
 
 #footer{background-color: #001360; padding-bottom: 30px; padding-top: 30px;}
 
-#smallersize{font-size: 12px; }
+#smallersize{font-size: 12px;}
 
 /*#smedia{
 	margin-top: 50px;
@@ -281,7 +281,6 @@ text-align: center;
 }*/
 
 #foot h1{
-	margin-top: 50px;
 	text-align:center;
 	text-transform:uppercase;
 	font-size:0.8em;
