--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<link rel='stylesheet' href='/stylesheets/index.css'>
 		<!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
-		<script src='javascripts/index.js'></script>
+		<script src='/javascripts/index.js'></script>
 	</head>
 	<body>
 		<div>
@@ -69,7 +69,7 @@
 				<img src='/images/plugg.png' alt='plugin' id='pluginpic'/>
 				<img src='/images/sticker-01.png' alt='plugin' id='pluginlg'/>
 				<p id='plugintxt'>
-					Grâce au téléchargement d’un plugin, muni d’un outil graphique performant, il sera bientôt possible de tagger le web ou d’y importer des a
+					Grâce au téléchargement d’un plugin, muni d’un outil graphique performant, il sera bientôt possible de tagger le web ou d’y importer des images.
 					Le plugin marche comme un calque qui s’applique directement sur tous les sites internet, et permet de créer et de visualiser les oeuvres des webtaggers.
 				</p>
 				<p>
