--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Gilroy-ExtraBold';
-	src: url('../fonts/Gilroy-Extrabold.otf');
+	src: url('../fonts/Gilroy-ExtraBold.otf');
 }
 
 @font-face {
@@ -87,7 +87,7 @@ text-align: center;
 	border-radius: 25px; border : 3px solid white; padding: 18px; font-family: 'Gilroy-Light'; background-color: #001360;
 }
 
-@media screen and (min-width: 1241px)
+@media screen and (min-width: 1245px)
 {
 	.inner_content{
 		position: relative;
@@ -98,24 +98,23 @@ text-align: center;
 	#plugintxt{ right: 145px; margin-top: 100px; }
 	#apptxt{ left: 200px; margin-top : 660px; }
 	#sitetxt{ right : 145px; margin-top: 1200px; }
-	#aura{margin-top: 310px;}
+	#aura{margin-top: 340px;}
 }
 
-@media screen and (max-width: 1240px)
+@media screen and (max-width: 1244px)
 {
 	#plugintxt{ right: 40px; margin-top: 100px; }
 	#apptxt{ left: 40px; margin-top : 660px; }
 	#sitetxt{ right : 40px; margin-top: 1200px; }
-	#aura{margin-top: 210px;}
+	#aura{margin-top: 650px;}
 	.inner_content{
-		min-width: 320px;
+		min-width: 1000px;
 	}
 }
 @media screen and (max-width: 1000px){
-	#aura{margin-top: 350px; }
-
+	#aura{margin-top: 650px; }
 	.inner_content{
-		min-width: 1000px;
+		min-width: 999px;
 	}
 }
 #email{ margin-left: -100px; border-radius: 25px; border : 3px solid white; padding: 18px; font-family: 'Gilroy-Light'; background-color: #001360}
@@ -146,7 +145,7 @@ text-align: center;
 	padding-top: 80px;
 }
 
-#theyellowdiv{ background-color: #F4F0CD;}
+#theyellowdiv{ background-color: #F4F0CD; padding-bottom: 50px;}
 
 #logo{ height:370px; width: auto; }
 #tagcomp{ height: 380px; width: auto; padding-top: 20px; margin-right: 110px;}
