--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@
 			<h2 class='whities' id='size'>POUR PLUS D'INFORMATIONS</h2>
 			<div id='foot'>
 				<div class='contact' id='cont'>
-					<p class='whities' id='secondtext'>
+					<p class='whities'>
 						si vous voulez recevoir le plugin en avant <br />
 						premiere contactez nous à cette adresse :
 					</p>
@@ -104,7 +104,7 @@
 					</div>
 				</div>
 				<div class='contact'>
-					<p class='whities' id='secondtext'>
+					<p class='whities'>
 						si vous souhaitez être tenu au courant <br />
 						de la sortie world wide de notre plateforme <br />
 						<span id='smallersize'>Laissez nous votre adresse mail ci dessous :</span>
