--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 					<img src="images/logo_blanc-01.png">
 					<div class='contact'>
 						<p>
-							Vous souhaitez faire parti des premiers à utiliser Webtag? <br/>
+							Vous souhaitez faire partie des premiers à utiliser Webtag? <br/>
 							Laissez nous votre email!
 						</p>
 						<form action='/' method='post' name='emailForm'>
@@ -80,14 +80,14 @@
 				<h1 id='siteh1'>Site Web</h1>
 				<img src='/images/mac_accueil.png' alt='site' id='sitepic'/>
 				<p id='sitetxt'>
-					Le plugin est lié à un site internet communautaire où les webtaggers ont leur galerie personnelle — comme un book — pour partager leurs oeuvres et celles des autres. Grâce au site, il sera possible d’établir des partenariats avec des sites, des marques et de vendre ses oeuvres.
+					L’application est une déclinaison ludique du site, où l’utilisateur peut personnaliser son rapport aux oeuvres par une notation en étoiles, exprimer ses émotions par des émoticônes et échanger sur des canaux de discussion.
 				</p>
 				<img src='/images/fond_rosecrop.png' alt='rosebg' id='rosebg'/>
 				<h1 id='num3'>03</h1>
 				<h1 id='apph1'>Application</h1>
 				<img src='/images/app_screen.png' alt='app' id='apppic'/><br />
 				<p id='apptxt'>
-					L’application est une déclinaison ludique du site, où l’utilisateur peut personnaliser son rapport aux oeuvres par une notation en étoiles, exprimer ses émotions par des émoticônes et échanger sur des canaux de discussion.
+					Le plugin est lié à un site internet communautaire où les webtaggers ont leur galerie personnelle — comme un book — pour partager leurs oeuvres et celles des autres. Grâce au site, il sera possible d’établir des partenariats avec des sites, des marques et de vendre ses oeuvres.
 				</p>
 			</div>
 		</div>
