--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 			<img src='/images/auraws.png' alt='aura' id='aura'/>
 			<img src='/images/ilu-01.png' alt='tag-calc' id='tagcomp'/>
 			<div id='firsttext'>
-				<h1>TRANSFORMER <br />LE WEB<span class='yellow'>.</span></h1>
+				<h1>TRANSFORMEZ <br />LE WEB<span class='yellow'>.</span></h1>
 				<p id='secondtext'>
 					Internet devient une galerie virtuelle <br />
 					et communautaire où tout le monde peut venir <br />
